<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/ad_server_settings" >
        <EditTextPreference
            android:title="@string/ad_server_ip"
            android:summary="@string/ad_server_ip_summary"
            android:key="adServerIp"
            android:defaultValue="127.0.0.1"/>
        <EditTextPreference
            android:title="@string/ad_server_port"
            android:summary="@string/ad_server_port_summary"
            android:key="adServerPort"
            android:numeric="integer"
            android:defaultValue="8080"/>
        <ListPreference
            android:key="location"
            android:entries="@array/cities"
            android:summary="@string/user_location"
            android:entryValues="@array/cities"
            android:title="@string/location"
            android:defaultValue="Lagos"/>
    </PreferenceCategory>


</PreferenceScreen>